@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 2.999-999.016
-Date: 2022-07-01
+Version: 2.999-999.017
+Date: 2022-07-08
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
