@@ -1,3 +1,3 @@
 date version nhelpfiles nobjects ndatasets Rlines srclines
 "2022-05-25" "3.0-0" 224 500 0 30319 6183
-"2022-07-01" "2.999-999.016" 225 505 0 30367 6183
+"2022-07-08" "2.999-999.017" 225 505 0 30482 6183
