@@ -18,7 +18,8 @@ rhohat(object, covariate, ...)
        baseline=NULL, weights=NULL,
        method=c("ratio", "reweight", "transform"),
        horvitz=FALSE,
-       smoother=c("kernel", "local", "decreasing", "increasing", "piecewise"),
+       smoother=c("kernel", "local", "decreasing", "increasing",
+       "mountain", "valley", "piecewise"),
        subset=NULL, 
        dimyx=NULL, eps=NULL,
        n = 512, bw = "nrd0", adjust=1, from = NULL, to = NULL,
@@ -29,7 +30,8 @@ rhohat(object, covariate, ...)
        baseline=NULL, weights=NULL,
        method=c("ratio", "reweight", "transform"),
        horvitz=FALSE,
-       smoother=c("kernel", "local", "decreasing", "increasing", "piecewise"),
+       smoother=c("kernel", "local", "decreasing", "increasing",
+                  "mountain", "valley", "piecewise"),
        subset=NULL, 
        dimyx=NULL, eps=NULL,
        n = 512, bw = "nrd0", adjust=1, from = NULL, to = NULL,
